Fixed header margin issue on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -915,7 +915,6 @@ nav a:hover {
     .nextProject {
         position: relative;
         left: 0;
-        margin-left: 20px;
         margin-top: 100px;
         margin-bottom: 20px;
         overflow: visible;
